--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="">
-
-    <title>Starter Template for Bootstrap</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/favico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="./images/favico/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./images/favico/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="./images/favico/manifest.json">
+    <link rel="mask-icon" href="./images/favico/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./images/favico/favicon.ico">
+    <meta name="msapplication-config" content="./images/favico/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <title>Akta</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
-
+    <!-- Font awesome icons CSS -->
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="./css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -26,61 +36,100 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-	
-	<div class="container">
-		<div class="ads">
-					<img src="http://placehold.it/1250x130?text=Place for ads.">
-				</div>
-				<nav class="upper_menu">
-					<ul>
-						<li><a href="#" class="met_color_transition">News</a></li>
-						<li><a href="#" class="met_color_transition">FAQ</a></li>
-						<li><a href="#" class="met_color_transition">Contact</a></li>
-					</ul>
-				</nav>
-	</div>
+<body>
+
+    <div class="container">
+        <div class="ads">
+            <img src="http://placehold.it/1250x130?text=Place for ads.">
+        </div>
+        <nav class="upper_menu">
+            <ul>
+                <li><a href="#" class="um_vijesti active">VIJESTI</a></li>
+                <li><a href="#" class="um_registar">REGISTAR</a></li>
+                <li><a href="#" class="um_tenderi">TENDERI</a></li>
+                <li><a href="#" class="um_promo">PROMO</a></li>
+                <li><a href="#" class="um_forum">FORUM</a></li>
+
+            </ul>
+        </nav>
+    </div>
     <nav class="navbar navbar-inverse ">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="logo-link" href="#"><img class="logo" src="./images/logo.png" alt="logo"></a>
+                <a class="logo-link" href="#"><img class="logo" src="./images/logo.png" alt="logo"></a>
+            </div>
+            <div id="header_navigation" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">O nama</a></li>
+                    <li><a href="#">Partneri</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Marketing</a></li>
+                </ul>
+                <ul class="nav navbar-nav social_icons">
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                </ul>
+                <ul class="nav navbar-nav user_menu">
+                    <li>
+                        <a href="#" class="person-ico">
+                            <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
+                            <g>
+                            <g>
+                              <path fill="#FFFFFF" d="M12.8,12.6c1.4-0.9,2.3-2.4,2.3-4.2c0-2.7-2.2-4.9-4.9-4.9c-2.7,0-4.9,2.2-4.9,4.9c0,1.8,0.9,3.3,2.3,4.2
+                                c-2,0.7-3.6,2.3-4.3,4.2c-0.2,0.5,0.8,1.4,0.8,1.4c0.6-2.8,3.1-4.9,6.1-4.9c3,0,5.5,2.1,6.1,4.9c0,0,1-0.9,0.8-1.4
+                                C16.4,14.9,14.8,13.3,12.8,12.6L12.8,12.6z M6.6,8.5c0-2,1.7-3.7,3.7-3.7c2,0,3.7,1.7,3.7,3.7c0,2-1.7,3.7-3.7,3.7
+                                C8.2,12.1,6.6,10.5,6.6,8.5L6.6,8.5z M6.6,8.5"/>
+                            </g>
+                            <path fill="#FFFFFF" d="M10.3,20.5C4.6,20.5,0,15.9,0,10.3C0,4.6,4.6,0,10.3,0c5.7,0,10.3,4.6,10.3,10.3
+                              C20.5,15.9,15.9,20.5,10.3,20.5z M10.3,1.1c-5.1,0-9.2,4.1-9.2,9.2c0,5.1,4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
+                              C19.4,5.2,15.3,1.1,10.3,1.1z"/>
+                            </g>
+                          </svg>
+                        </a>
+                    </li>
+                    <li><a href="#">Prijava</a></li>
+                    <li><a href="#">Testiraj besplatno</a></li>
+                </ul>
+            </div>
+            <!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
     <div class="container">
 
-      <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      </div>
+        <div class="">
+            <h1>Bootstrap starter template</h1>
+            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        </div>
 
-    </div><!-- /.container -->
+    </div>
+    <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="./js/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script>
+        window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
+    </script>
     <script src="./js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
-  
 
-</body></html>
+
+</body>
+
+</html>
