Removed default navbar toggle button

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
             <!--/.nav-collapse -->
         </div>
     </nav>
+    <div class="container-fluid">
+        <div class="container">
+          <ul class="nav navbar-nav">
+                    <li><a href="#">O nama</a></li>
+                    <li><a href="#">Partneri</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Marketing</a></li>
+                </ul>
+        </div>
+    </div>
 
     <div class="container">
 
