Added sub header menu, and separate class of submenu

--- a/index.html
+++ b/index.html
@@ -58,12 +58,6 @@
     <nav class="navbar navbar-inverse ">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
                 <a class="logo-link" href="#"><img class="logo" src="./images/logo.png" alt="logo"></a>
             </div>
             <div id="header_navigation" class="collapse navbar-collapse">
@@ -108,24 +102,28 @@
     </nav>
     <div class="container-fluid">
         <div class="container">
-          <ul class="nav navbar-nav">
-                    <li><a href="#">O nama</a></li>
-                    <li><a href="#">Partneri</a></li>
-                    <li><a href="#">Kontakt</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Marketing</a></li>
-                </ul>
+            <ul class="nav navbar-nav main_nav">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">VIJESTI</a></li>
+                <li><a href="#">Kapitalt</a></li>
+                <li><a href="#">Eu</a></li>
+                <li><a href="#">Najave</a></li>
+                <li><a href="#">Ličnosti</a></li>
+                <li><a href="#">Karijera</a></li>
+                <li><a href="#">Pauza</a></li>
+            </ul>
         </div>
     </div>
+    <section class="main_body_contents">
+        <div class="container">
 
-    <div class="container">
+            <div class="">
+                <h1>Bootstrap starter template</h1>
+                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+            </div>
 
-        <div class="">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
         </div>
-
-    </div>
+    </section>
     <!-- /.container -->
 
 
