--- a/index.html
+++ b/index.html
@@ -102,16 +102,86 @@
     </nav>
     <div class="container-fluid">
         <div class="container">
-            <ul class="nav navbar-nav main_nav">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">VIJESTI</a></li>
-                <li><a href="#">Kapitalt</a></li>
-                <li><a href="#">Eu</a></li>
-                <li><a href="#">Najave</a></li>
-                <li><a href="#">Ličnosti</a></li>
-                <li><a href="#">Karijera</a></li>
-                <li><a href="#">Pauza</a></li>
+
+
+            <li class="dropdown mega-dropdown">
+                <ul class="nav navbar-nav main_nav">
+                    <li><a class="active" href="#">HOME</a></li>
+                    <li><a href="#">VIJESTI</a></li>
+                    <li><a href="#">Kapitalt</a></li>
+                    <li><a href="#">Eu</a></li>
+                    <li><a href="#">Najave</a></li>
+                    <li><a href="#">Ličnosti</a></li>
+                    <li><a href="#">Karijera</a></li>
+                    <li><a href="#">Pauza</a></li>
+                </ul>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
+
+                <span class="search_bar">
+                    <input type="text" class="form-control input-lg pretraga" placeholder="Pretraga..." />
+                    <a href="#" class="search-icon" type="button">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </a>
+                    
+                </span>
+
+                <ul class="dropdown-menu mega-dropdown-menu row">
+                    <li class="top_divider"></li>
+                    <li class="col-sm-3">
+                        <ul>
+                            <li class="dropdown-header">New in Stores</li>
+
+                            <li class="divider"></li>
+                        </ul>
+                    </li>
+                    <li class="col-sm-3">
+                        <ul>
+                            <li class="dropdown-header">Dresses</li>
+                            <li><a href="#">Unique Features</a></li>
+                            <li><a href="#">Image Responsive</a></li>
+                            <li><a href="#">Auto Carousel</a></li>
+                            <li><a href="#">Newsletter Form</a></li>
+                            <li><a href="#">Four columns</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Tops</li>
+                            <li><a href="#">Good Typography</a></li>
+                        </ul>
+                    </li>
+                    <li class="col-sm-3">
+                        <ul>
+                            <li class="dropdown-header">Jackets</li>
+                            <li><a href="#">Easy to customize</a></li>
+                            <li><a href="#">Glyphicons</a></li>
+                            <li><a href="#">Pull Right Elements</a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Pants</li>
+                            <li><a href="#">Coloured Headers</a></li>
+                            <li><a href="#">Primary Buttons & Default</a></li>
+                            <li><a href="#">Calls to action</a></li>
+                        </ul>
+                    </li>
+                    <li class="col-sm-3">
+                        <ul>
+                            <li class="dropdown-header">Accessories</li>
+                            <li><a href="#">Default Navbar</a></li>
+                            <li><a href="#">Lovely Fonts</a></li>
+                            <li><a href="#">Responsive Dropdown </a></li>
+                            <li class="divider"></li>
+                            <li class="dropdown-header">Newsletter</li>
+                            <form class="form" role="form">
+                                <div class="form-group">
+                                    <label class="sr-only" for="email">Email address</label>
+                                    <input type="email" class="form-control" id="email" placeholder="Enter email">
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                            </form>
+                        </ul>
+                    </li>
+                </ul>
+
+            </li>
             </ul>
+
         </div>
     </div>
     <section class="main_body_contents">
@@ -138,7 +208,7 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
 
-
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
