Added megamenu header classes.

--- a/index.html
+++ b/index.html
@@ -127,54 +127,37 @@
 
                 <ul class="dropdown-menu mega-dropdown-menu row">
                     <li class="top_divider"></li>
-                    <li class="col-sm-3">
+                    <li class="col-sm-4">
                         <ul>
-                            <li class="dropdown-header">New in Stores</li>
+                            <li class="dropdown-header "><a href="#" class="vijesti">VIJESTI</a></li>
 
-                            <li class="divider"></li>
+
                         </ul>
                     </li>
-                    <li class="col-sm-3">
+                    <li class="col-sm-2">
                         <ul>
-                            <li class="dropdown-header">Dresses</li>
-                            <li><a href="#">Unique Features</a></li>
-                            <li><a href="#">Image Responsive</a></li>
-                            <li><a href="#">Auto Carousel</a></li>
-                            <li><a href="#">Newsletter Form</a></li>
-                            <li><a href="#">Four columns</a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Tops</li>
-                            <li><a href="#">Good Typography</a></li>
+                            <li class="dropdown-header "><a href="#" class="registar">REGISTAR</a></li>
+
                         </ul>
                     </li>
-                    <li class="col-sm-3">
+                    <li class="col-sm-2">
                         <ul>
-                            <li class="dropdown-header">Jackets</li>
-                            <li><a href="#">Easy to customize</a></li>
-                            <li><a href="#">Glyphicons</a></li>
-                            <li><a href="#">Pull Right Elements</a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Pants</li>
-                            <li><a href="#">Coloured Headers</a></li>
-                            <li><a href="#">Primary Buttons & Default</a></li>
-                            <li><a href="#">Calls to action</a></li>
+                            <li class="dropdown-header"><a href="#" class="tenderi">TENDERI</a></li>
+
                         </ul>
                     </li>
-                    <li class="col-sm-3">
+                    <li class="col-sm-2">
                         <ul>
-                            <li class="dropdown-header">Accessories</li>
-                            <li><a href="#">Default Navbar</a></li>
-                            <li><a href="#">Lovely Fonts</a></li>
-                            <li><a href="#">Responsive Dropdown </a></li>
-                            <li class="divider"></li>
-                            <li class="dropdown-header">Newsletter</li>
-                            <form class="form" role="form">
-                                <div class="form-group">
-                                    <label class="sr-only" for="email">Email address</label>
-                                    <input type="email" class="form-control" id="email" placeholder="Enter email">
-                                </div>
-                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                            </form>
+                            <li class="dropdown-header"><a href="#" class="promo">PROMO</a></li>
+
+
+                        </ul>
+                    </li>
+                    <li class="col-sm-2">
+                        <ul>
+                            <li class="dropdown-header"><a href="#" class="forum">FORUM</a></li>
+
+
                         </ul>
                     </li>
                 </ul>
@@ -184,6 +167,7 @@
 
         </div>
     </div>
+    <!-- MAIN BODY -->
     <section class="main_body_contents">
         <div class="container">
 
