Added news scroller.

--- a/index.html
+++ b/index.html
@@ -297,6 +297,67 @@
     <!-- MAIN BODY -->
     <section class="main_body_contents">
         <div class="container">
+            <!-- Scroller vijesti -->
+            <div class="skroler-novosti-modul">
+                <div class="news-label">Najnovije</div>
+                <div id="skroler-novosti" class="carousel fdi-Carousel slide">
+
+                    <div class="carousel fdi-Carousel slide" id="eventCarousel" data-interval="0">
+                        <div class="carousel-inner onebyone-carosel">
+                            <div class="item active">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                VIJESTI / SVIJET:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                LIČNOSTI / svijet:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                LIČNOSTI / svijet:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-6">
+                                    <a class="link-novosti" href="#">
+                                        <span class="kategorija-novosti">
+                                                VIJESTI / SVIJET:
+                                            </span>
+                                        <span class="naslov-novosti">
+                                                Lorem ipsum dolor sit amet, consecur egestas quis; 
+                                            </span>
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="next-label"><a id="dalje"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a></div>
+            </div>
 
             <div class="">
                 <h1>Bootstrap starter template</h1>
