--- a/index.html
+++ b/index.html
@@ -536,19 +536,19 @@
                     <div class="col-md-3">
                         <li class="footer nopadding subheader"><a href="#">NAJNOVIJI TEKSTOVI</a></li>
                         <li class="footer-latest-news-item">
-                            <img class="img-rounded" src="http:placehold.it/100x60">
+                            <img class="img-rounded" src="http://placehold.it/100x60">
                             <span class="kategorija">REGIJA</span><br>
                             <span class="naslov">Lorem ipsum dolor sitconsecur</span>
 
                         </li>
                         <li class="footer-latest-news-item">
-                            <img class="img-rounded" src="http:placehold.it/100x60">
+                            <img class="img-rounded" src="http://placehold.it/100x60">
                             <span class="kategorija">REGIJA</span><br>
                             <span class="naslov">Lorem ipsum dolor sitconsecur</span>
 
                         </li>
                         <li class="footer-latest-news-item">
-                            <img class="img-rounded" src="http:placehold.it/100x60">
+                            <img class="img-rounded" src="http://placehold.it/100x60">
                             <span class="kategorija">REGIJA</span><br>
                             <span class="naslov">Lorem ipsum dolor sitconsecur</span>
 
