Added masonry.js and imagesLoaded.js and created masonry grid

--- a/index.html
+++ b/index.html
@@ -468,6 +468,70 @@
             </div>
         </div>
     </section>
+    <section class="investicije">
+        <div class="container">
+
+            <h1 class="naslov-kolone ">Investicije</h1>
+            <div id="vijesti-wrap" class=" row remargin">
+                <div class="col-md-4 card card-vijest">
+                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                    <div class="card-opis-vijesti">
+                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                        <div class="card-count-label">
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 card card-vijest ">
+                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                    <div class="card-opis-vijesti">
+                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                        <div class="card-count-label">
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 card card-vijest">
+                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                    <div class="card-opis-vijesti">
+                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                        <div class="card-count-label">
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 card card-vijest ">
+                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                    <div class="card-opis-vijesti">
+                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                        <div class="card-count-label">
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 card card-vijest">
+                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                    <div class="card-opis-vijesti">
+                        <p class="card-kategorija">Vijesti / SVIJET</p>
+                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                        <div class="card-count-label">
+                            <p>100</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
     <section id="footer">
         <div class="container-fluid newsletter-footer">
             <h1>PRIJAVI SE ZA <span>NEWSLETTER</span></h1>
@@ -587,7 +651,8 @@
     <script src="./js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="./js/ie10-viewport-bug-workaround.js"></script>
-
+    <script src="./js/imagesLoaded.js"></script>
+    <script src="./js/masonry.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
