--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
             </div>
         </div>
     </div>
+
     <!-- MAIN BODY -->
     <section class="main_body_contents">
         <div class="container">
@@ -472,66 +473,160 @@
         <div class="container">
 
             <h1 class="naslov-kolone ">Investicije</h1>
-            <div id="vijesti-wrap" class=" row remargin">
-                <div class="col-md-4 card card-vijest">
-                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
-                    <div class="card-opis-vijesti">
-                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                        <div class="card-count-label">
-                            <p>100</p>
+            <div class="wrap-kolona remargin">
+                <div class="col-md-8 ">
+                    <div id="vijesti-wrap" class=" row">
+
+                        <div class="col-md-6 card card-vijest">
+                            <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
                         </div>
+                        <div class="col-md-6 card card-vijest ">
+                            <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 card card-vijest ">
+                            <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
+                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 card card-vijest">
+                            <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
-                <div class="col-md-4 card card-vijest ">
-                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
-                    <div class="card-opis-vijesti">
-                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                        <div class="card-count-label">
-                            <p>100</p>
+                <div class="col-md-4 ">
+                    <div id="moduli-wrap" class="row ">
+                        <div class="col-md-12 card card-vijest card-registar">
+                            <h2 class="module-label"><span>REGISTAR</span></h2>
+                            <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
+                            <div class="card-opis-vijesti">
+                                <p class="card-kategorija">Vijesti / SVIJET</p>
+                                <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
+                                <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
+                                <div class="card-count-label">
+                                    <p>Više tekstova REGISTAR</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-4 card card-vijest">
-                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
-                    <div class="card-opis-vijesti">
-                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                        <div class="card-count-label">
-                            <p>100</p>
+                        <div class="col-md-12 card card-newsletter card-vijest kursna-lista">
+                            <div class="card-opis-vijesti">
+                                <h1 class="card-naslov-vijesti">Kursna lista <span class="datum" id="datum">19.10.2016.</span></h1>
+                                <table class="table table-hover kursna-lista-tabela">
+                                    <thead>
+                                        <tr>
+                                            <th>Zemlja</th>
+                                            <th>Šifra valute</th>
+                                            <th>Oznaka valute</th>
+                                            <th>Srednji kurs</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>EMU </td>
+                                            <td>978 </td>
+                                            <td>EUR </td>
+                                            <td>1,95583</td>
+                                        </tr>
+                                        <tr>
+                                            <td>EMU </td>
+                                            <td>978 </td>
+                                            <td>EUR </td>
+                                            <td>1,95583</td>
+                                        </tr>
+                                        <tr>
+                                            <td>EMU </td>
+                                            <td>978 </td>
+                                            <td>EUR </td>
+                                            <td>1,95583</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-md-4 card card-vijest ">
-                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
-                    <div class="card-opis-vijesti">
-                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet</h1>
-                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                        <div class="card-count-label">
-                            <p>100</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 card card-vijest">
-                    <img class="img-responsive card-slika-vijesti" src="http://placehold.it/852x415&text=16:9">
-                    <div class="card-opis-vijesti">
-                        <p class="card-kategorija">Vijesti / SVIJET</p>
-                        <h1 class="card-naslov-vijesti">Lorem ipsum dolor sit amet,consecur egestas quis</h1>
-                        <p class="card-intro-vijesti">Gojazni đačić s biciklom drži hmelj i finu vatu u džepu nošnje.</p>
-                        <div class="card-count-label">
-                            <p>100</p>
+                        <div class="col-md-12 card card-newsletter card-vijest konvertor-valuta">
+                            <div class="card-opis-vijesti">
+                                <h1 class="card-naslov-vijesti">Konvertor valuta</h1>
+                                <form>
+                                    <div class="form-group has-feedback">
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" placeholder="Vrijednost">
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" placeholder="Srednji za devize">
+                                            <span class="form-control-feedback">
+                                                <i class="fa fa-sort" aria-hidden="true"></i>
+                                            </span>
+                                        </div>
+
+                                    </div>
+                                    <div class="form-group has-feedback">
+                                        <div class="col-sm-6">
+                                            <input type="select" class="form-control" placeholder="Konvertuj iz">
+                                            <span class="form-control-feedback">
+                                                <i class="fa  fa-sort" aria-hidden="true"></i>
+                                            </span>
+                                            <span style="position: absolute;
+    top: 6px;
+    right: -3px;">
+                                            <i class="fa  fa-caret-right" aria-hidden="true"></i>
+                                            </span>
+                                        </div>
+
+                                        <div class="col-sm-6">
+                                            <input type="text" class="form-control" placeholder="Last">
+                                        </div>
+                                    </div>
+                                    <a href="#" class="card-button" onclick="$(this).closest('form').submit()">
+                                        <spn class="card-button-ikona"><i class="fa fa-ban" aria-hidden="true"></i></spn><span class="card-button-tekst">prijavi se</span></a>
+                                </form>
+                                <div class="card-count-label">
+                                    <p>100</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
+
+
+    <!--- footer sekcija -->
     <section id="footer">
         <div class="container-fluid newsletter-footer">
             <h1>PRIJAVI SE ZA <span>NEWSLETTER</span></h1>
@@ -641,9 +736,7 @@
     </section>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Bootstrap core JavaScript  -->
     <script src="./js/jquery.min.js"></script>
     <script>
         window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
