--- a/index.html
+++ b/index.html
@@ -120,7 +120,23 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
                     <span class="search_bar">
+                        <a href="#" class="person-ico hidden-sm">
+                                <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
+                            <g>
+                            <g>
+                              <path fill="#FFFFFF" d="M12.8,12.6c1.4-0.9,2.3-2.4,2.3-4.2c0-2.7-2.2-4.9-4.9-4.9c-2.7,0-4.9,2.2-4.9,4.9c0,1.8,0.9,3.3,2.3,4.2
+                                c-2,0.7-3.6,2.3-4.3,4.2c-0.2,0.5,0.8,1.4,0.8,1.4c0.6-2.8,3.1-4.9,6.1-4.9c3,0,5.5,2.1,6.1,4.9c0,0,1-0.9,0.8-1.4
+                                C16.4,14.9,14.8,13.3,12.8,12.6L12.8,12.6z M6.6,8.5c0-2,1.7-3.7,3.7-3.7c2,0,3.7,1.7,3.7,3.7c0,2-1.7,3.7-3.7,3.7
+                                C8.2,12.1,6.6,10.5,6.6,8.5L6.6,8.5z M6.6,8.5"/>
+                            </g>
+                            <path fill="#FFFFFF" d="M10.3,20.5C4.6,20.5,0,15.9,0,10.3C0,4.6,4.6,0,10.3,0c5.7,0,10.3,4.6,10.3,10.3
+                              C20.5,15.9,15.9,20.5,10.3,20.5z M10.3,1.1c-5.1,0-9.2,4.1-9.2,9.2c0,5.1,4.1,9.2,9.2,9.2c5.1,0,9.2-4.1,9.2-9.2
+                              C19.4,5.2,15.3,1.1,10.3,1.1z"/>
+                            </g>
+                          </svg>
+                    </a>
                     <input type="text" class="form-control input-lg pretraga" placeholder="Pretraga..." />
+                    
                     <a href="#" class="search-icon" type="button">
                         <i class="fa fa-search" aria-hidden="true"></i>
                     </a>
@@ -129,7 +145,7 @@
 
                     <ul class="dropdown-menu mega-dropdown-menu row">
                         <li class="top_divider"></li>
-                        <li class="col-sm-4 glavna_kategorija">
+                        <li class="col-xs-12 col-sm-6 col-md-4 glavna_kategorija">
                             <ul>
                                 <li class="dropdown-header "><a href="#" class="vijesti">VIJESTI</a></li>
                                 <!--Lijeva kolona linkova -->
@@ -258,14 +274,14 @@
                                 </ul>
                             </ul>
                         </li>
-                        <li class="col-sm-2 glavna_kategorija">
+                        <li class="col-xs-12 col-sm-3 col-md-2 glavna_kategorija">
                             <ul>
                                 <li class="dropdown-header "><a href="#" class="registar">REGISTAR</a></li>
                                 <li class="subheader"><a href="#">KOMPANIJE I INSTITUCIJE</a></li>
                                 <li class="subheader"><a href="#">MENADŽERSKE POZICIJE</a></li>
                             </ul>
                         </li>
-                        <li class="col-sm-2 glavna_kategorija">
+                        <li class="col-xs-12 col-sm-3 col-md-2 glavna_kategorija">
                             <ul>
                                 <li class="dropdown-header"><a href="#" class="tenderi">TENDERI</a></li>
                                 <li class="subheader"><a href="#">OBJAVLJENI TENDERI</a></li>
@@ -273,7 +289,7 @@
                                 <li class="subheader"><a href="#">PRODAJA POTRAŽIVANJA</a></li>
                             </ul>
                         </li>
-                        <li class="col-sm-2 glavna_kategorija">
+                        <li class="col-xs-12 col-sm-3 col-md-2 glavna_kategorija">
                             <ul>
                                 <li class="dropdown-header"><a href="#" class="promo">PROMO</a></li>
                                 <li class="subheader"><a href="#">svijet</a></li>
@@ -282,7 +298,7 @@
 
                             </ul>
                         </li>
-                        <li class="col-sm-2 glavna_kategorija">
+                        <li class="col-xs-12 col-sm-3 col-md-2 glavna_kategorija">
                             <ul>
                                 <li class="dropdown-header"><a href="#" class="forum">FORUM</a></li>
 
@@ -547,7 +563,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-6 col-lg-4 card card-newsletter card-vijest kursna-lista">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 card card-newsletter card-vijest kursna-lista">
                             <div class="card-opis-vijesti">
                                 <h1 class="card-naslov-vijesti">Kursna lista <span class="datum" id="datum">19.10.2016.</span></h1>
                                 <table class="table table-hover kursna-lista-tabela">
@@ -585,7 +601,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-6 col-lg-4 card card-newsletter card-vijest konvertor-valuta">
+                        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 card card-newsletter card-vijest konvertor-valuta">
                             <div class="card-opis-vijesti">
                                 <h1 class="card-naslov-vijesti">Konvertor valuta</h1>
                                 <form>
@@ -776,7 +792,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-newsletter card-vijest konvertor-valuta kreditni-kalk">
+                        <div class="col-xs-12 col-sm-6 col-md-4 card card-newsletter card-vijest konvertor-valuta kreditni-kalk">
                             <div class="card-opis-vijesti">
                                 <h1 class="card-naslov-vijesti">Kreditni kalkulator</h1>
                                 <form>
@@ -865,7 +881,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-newsletter card-vijest kursna-lista">
+                        <div class="col-xs-12 col-sm-6 col-md-4 card card-newsletter card-vijest kursna-lista">
                             <div class="card-opis-vijesti">
                                 <h1 class="card-naslov-vijesti">Berza SASE <span class="datum" id="datum">19.10.2016.</span></h1>
                                 <table class="table table-hover kursna-lista-tabela">
@@ -903,7 +919,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-md-4 card card-newsletter card-vijest kursna-lista">
+                        <div class="col-xs-12 col-sm-6 col-md-4 card card-newsletter card-vijest kursna-lista">
                             <div class="card-opis-vijesti">
                                 <h1 class="card-naslov-vijesti">Berza BLSE <span class="datum" id="datum">19.10.2016.</span></h1>
                                 <table class="table table-hover kursna-lista-tabela">
