--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bars" aria-hidden="true"></i></a>
 
                     <span class="search_bar">
-                        <a href="#" class="person-ico hidden-sm">
+                        <a href="#" class="person-ico hidden-sm hidden-md hidden-lg">
                                 <svg version="1.2" baseProfile="tiny" id="user_icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20.5 20.5" xml:space="preserve">
                             <g>
                             <g>
