main_nav responsivnes fix.

--- a/article.html
+++ b/article.html
@@ -107,7 +107,7 @@
 
 
                 <li class="dropdown mega-dropdown">
-                    <ul class="nav navbar-nav main_nav hidden-xs visible-md">
+                    <ul class="nav navbar-nav main_nav hidden-xs">
                         <li><a class="active" href="#">HOME</a></li>
                         <li><a href="#">VIJESTI</a></li>
                         <li><a href="#">Kapitalt</a></li>
@@ -383,7 +383,6 @@
             <div class="wrapper-vijesti remargin">
 
                 <div class="col-md-8 kolona-aktuelno ">
-                    <h1 class="naslov-kolone ">Aktuelno</h1>
                     <div class="col-xs-12 card card-lead nopadding">
                         <img class="img-responsive card-slika-vijesti" src="./images/dummy/pic10.jpg">
                         <div class="card-opis-vijesti">
