--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
                 <li class="dropdown mega-dropdown">
-                    <ul class="nav navbar-nav main_nav hidden-xs visible-md">
+                    <ul class="nav navbar-nav main_nav hidden-xs">
                         <li><a class="active" href="#">HOME</a></li>
                         <li><a href="#">VIJESTI</a></li>
                         <li><a href="#">Kapitalt</a></li>
